[tool.poetry]
name = "anonvsety_bot"
version = "1.0"
description = ""
authors = ["Nikolay Korlyakov <nkorlyakov67@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.25.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
